[metadata]
name = ovis-maestro
version = 0.2.0
url = https://github.com/ovis-hpc/maestro
author = Nick Tucker
author_email = nick@ogc.us
license = gpl-2.0 or bsd-3-clause
description = maestro - the ldmsd configurator
keywords = ovis, ldms, maestro

[options]
install_requires =
    etcd3
    PyYAML
    pysyncobj

packages = find:
package_dir =
    = src
    # parsed as { "" : "src" } (empty-str-key), for automatic package finding

# list of scripts to be installed in {PREFIX}/bin
scripts =
    scripts/maestro
    scripts/maestro_ctrl

[options.packages.find]
where = src
